  when strings started with a number and a string contained more than one word.
- Bug Fix (803): Modified Makefile.linux to not add SDF EPICS variables to the autoBurt.req file.
- Bug Fix (790): Added difference calc and EPICS records to provide diff between present setpoint
  and BURT request as added feature to SDF. As part of this fix, also:
  	- Changed the way filter switch setting errors are reported.
		- Old: FILTER_NAME_SW1S		Hex of BURT set		Hex of Present set
		- New: FILTER_NAME [ERRANT SWITCH NAME]		BURT ON/OFF	PRESENT ON/OFF
	- Increased display precision to BURT/PRESENT value fields on DIFF Display.
- Bug Fix (799) Added a third output, STATE, to the DacKillIop part.
- Bug Fix (763). rampMuxMatrix fix to screen size and background color for fractional settings.
- Bug Fix (802): Changed SDF reporting records from string type to waveform type to allow >40
  character strings to be reported to SDF MEDM screens.
- Bug Fix (791): Raise ADC waits to ADC0 23 mu-sec, others 5 mu-sec
- Bug Fix (792): Wait for RT startup to complete in start scripts
- Bug Fix (759): Fix DAQ calculation of science frame 'Fast Chans' on stand-alone
- Bug Fix (743): Increase ADC0 allowable wait to 20 mu-sec
- Bug Fix (751): Modified install script.
==================================================================================================
Changes for 2.9 release 
==================================================================================================
- Bug Fix (776): EXC part not operating properly under all selection conditions.
- Bug Fix (756): Added monitoring of the filter module 'Decimation' and 'Hold Output' settings as
  part of the common filter SWSTAT EPICS record. This required changes to:
  -  main.c, skeleton.st and fm10Gen.c to add the two extra bits.
  - In skeleton.st, moved the clr history and status to req diff bit up two to accomodate new
    switch monitors.