@@ -54,3 +54,4 @@ grecord(stringout,"%IFO%:%FILTER%_Name09")
 grecord(ao,"%IFO%:%FILTER%_SWSTAT")
 grecord(ao,"%IFO%:%FILTER%_SWREQ")
 grecord(ao,"%IFO%:%FILTER%_SWMASK")
+grecord(stringout,"%IFO%:%FILTER%_SWSTR")
